======================================================================================================================

XX XXX XXXX
Version 6.3.0
======================================================================================================================
AllOverIt
  * Added interceptor support to cater for Aspected Oriented Programming (AOP).


07 Dec 2022
Version 6.2.1
======================================================================================================================
AllOverIt
  * Updated ObjectMapper so the dynamic configuration is thread safe. The convenience of "configuration free" is the
    priority of this mapper.


07 Dec 2022
Version 6.2.0
======================================================================================================================
AllOverIt
  * Re-worked the ObjectPropertySerializer so it contains the optional filter instead of being a property on the Options.
    This now means multiple serializers can be requested from the registry such that they all use their own filter instance
    while sharing a Singleton options.


06 Dec 2022
Version 6.1.0
======================================================================================================================
AllOverIt
  * Re-worked the registration of the ObjectPropertySerializer filters as the process was not thread-saafe.
    Breaking change.
  * Added helper methods to GenericCahe to create keys.
  * Added a read-only property to provide the disposables contained in CompositeAsyncDisposable.

AllOverIt.*
  * Updated to Microsoft.* v7.0.0 where applicable
  
AllOverIt.Aws.Cdk.AppSync
  * Updated Amazon.CDK.AWS.AppSync to v1.181.1


24 Nov 2022
Version 6.0.1
======================================================================================================================
Tests
  * Corrected naming changes after code styling applied

AllOverIt.Validation
  * Fixed null reference issue for the case when creating a RuleFor(model => model)...

